[project]
name = "wordle_remastered"
version = "0.0.2"
description = "another bare minimum wordle bot"
license = "Unlicense"
authors = [
    { name = "asoul-rec", email = "asoulranbi@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyrofork==2.3.69",
    "TgCrypto-pyrofork>=1.2.7",
    "Pillow>=10",
    "numpy>=2"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
